[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-nba"
version = "0.1.0"
description = "A simple MCP server for serving relevant NBA information"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "nba-api>=1.9.0",
]
